fixed overflow + recipe page font weight

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,7 @@
 body {
   font-family: futura-pt;
   color: $secondary-header;
+  overflow: auto;
 }
 
 // Font styles
